# kairo-x

./: .gitignore  Cargo.toml  README.md
config/: default_config.toml
crates/kairo-cli/: Cargo.toml
crates/kairo-cli/src/: commands.rs  config.rs  display.rs  main.rs
crates/kairo-core/: Cargo.toml
crates/kairo-core/src/: itch.rs  lib.rs  plan_parser.rs  runtime.rs
crates/kairo-core/src/arena/: mod.rs  node.rs  priority_queue.rs  query.rs  serialize.rs
crates/kairo-core/src/classify/: fallback.rs  mod.rs  patterns.rs  rules.rs
crates/kairo-core/src/context/: candidates.rs  engine.rs  import_graph.rs  mod.rs  packer.rs
crates/kairo-core/src/controller/: heads.rs  inference.rs  input_assembly.rs  liquid_block.rs  math.rs  mod.rs  weights.rs
crates/kairo-core/src/enforcement/: compliance.rs  mod.rs  placeholder.rs  selector.rs  templates.rs
crates/kairo-core/src/fingerprint/: detector.rs  frameworks.rs  mod.rs
crates/kairo-core/src/parallel/: mod.rs
crates/kairo-core/src/persistence/: mod.rs
crates/kairo-core/src/session/: failover.rs  manager.rs  mod.rs  token_tracker.rs
crates/kairo-core/src/tools/: executor.rs  file_locks.rs  filesystem.rs  git.rs  mod.rs  search_replace.rs  snapshots.rs
crates/kairo-core/src/verification/: deterministic.rs  infrastructure.rs  llm_audit.rs  mod.rs  runner.rs  verdicts.rs
crates/kairo-llm/: Cargo.toml
crates/kairo-llm/src/: bridge.rs  call.rs  context_request.rs  lib.rs  parse_implementation.rs  response.rs  truncation.rs
crates/kairo-llm/src/providers/: anthropic.rs  local.rs  mod.rs  openai.rs
python/: __init__.py
python/training/: __init__.py  __main__.py  curriculum.py  evaluation.py  export.py  losses.py  trainer.py
python/training/data_factory/: __init__.py  action_traces.py  budget_traces.py  context_traces.py  pipeline.py  session_traces.py
python/training/model/: __init__.py  controller.py  dense_block.py  heads.py  liquid_block.py
