[package]
name = "kairo-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI interface for KAIRO-X enforcement agent"

[dependencies]
# Internal
kairo-core = { path = "../kairo-core" }
kairo-llm = { path = "../kairo-llm" }

# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# CLI
clap.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow.workspace = true

# Platform
libc.workspace = true
