[package]
name = "kairo-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Core engine for KAIRO-X enforcement agent: arena graph, verification, context engine, enforcement, parallel execution"

[dependencies]
# Internal
kairo-llm = { path = "../kairo-llm" }

# Concurrency
dashmap.workspace = true
tokio.workspace = true
crossbeam-channel.workspace = true

# Data structures
smallvec.workspace = true
bitvec.workspace = true
compact_str.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
toml.workspace = true

# Hashing
xxhash-rust.workspace = true
fnv.workspace = true

# Text processing
regex.workspace = true
similar.workspace = true

# Logging
tracing.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Misc
chrono.workspace = true
uuid.workspace = true
rand.workspace = true

[dev-dependencies]
tempfile.workspace = true
